<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/ensisa1">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:popupTheme="@style/Theme.Ensiblog.PopupOverlay"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ENSI"
            android:textColor="@color/marinclair"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="14dp" />
        <TextView
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/MARIN_APP"
            android:text="BLOG"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EnsiBLOG"
        android:textColor="@color/blueLight"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creeUnCompte"
        android:textColor="@color/colorWhite"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avezVousCompte"
        android:textColor="@color/blueLight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637" />

    <EditText
        android:id="@+id/editTextLoginUsername"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Mail UHA"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginUsername" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/top"
        android:text="@string/creeUnCompte"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="#07599A"
        android:textColorLink="#0F4570"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="236dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/top"
        android:text="@string/connexion"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="#07599A"
        android:textColorLink="#0F4570"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>